<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ChannelType" Id="{a9768f8a-943a-49e2-a448-c8b465ed78bf}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE ChannelType :
(
	NONE := Tc2_PlcInterpolation.E_ItpChannelType.ItpChannelTypeNone,
	INTERPRETER := Tc2_PlcInterpolation.E_ItpChannelType.ItpChannelTypeInterpreter,
	KINEMATIC := Tc2_PlcInterpolation.E_ItpChannelType.ItpChannelTypeKinematic,
	INVALID_ITF_VERSION := Tc2_PlcInterpolation.E_ItpChannelType.ItpChannelType_InvalidItfVer
) INT;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>